--- a/ProjWayz/nbproject/project.properties
+++ b/ProjWayz/nbproject/project.properties
@@ -33,12 +33,16 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ProjWayz
 excludes=
-file.reference.mysql-connector-java-8.0.28.jar=C:\\Users\\kelwin_santos\\Downloads\\ExemploBD\\conector\\mysql-connector-java-8.0.28.jar
+file.reference.clock-2.2.0.jar=C:\\Users\\Acer\\Downloads\\jar_files\\clock-2.2.0.jar
+file.reference.jcalendar-1.4.jar=C:\\Users\\Acer\\Downloads\\jcalendar-1.4.jar\\jcalendar-1.4.jar
+file.reference.mysql-connector-java-8.0.28.jar=conectorMySQL\\mysql-connector-java-8.0.28.jar
 includes=**
 jar.compress=false
 javac.classpath=\
+    ${file.reference.mysql-connector-java-8.0.28.jar}:\
+    ${file.reference.jcalendar-1.4.jar}:\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.mysql-connector-java-8.0.28.jar}
+    ${file.reference.clock-2.2.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
